--- a/index.html
+++ b/index.html
@@ -6,22 +6,50 @@
   </head>
   <body class ="box">
     <header>
-      <div>
-        <a href ="index.html" ><img  class="logo" src="image/logo.png"></a>
-        <h1 class="main-heading">Food Everywhere</h1>
-        
-      </div>
+        <header>
+          <a href ="index.html" ><img  class="logo" src="image/logo.png"></a>
+          <h1 class="main-heading">Food Everywhere</h1>
+        </header>
+        <nav class="navigation-bar">
+          <ul class="list-of-items">
+            <li class="item"><a href="story.html" class="links">Cookies</a></li>
+            <li class="item"><a href="story.html" class="links">Macroons</a></li>
+            <li class="item"><a href="index.html" class="links">Cakes</a></li>
+            </li>
+          </ul>
+        </nav>      
     </header>
     <main>
-      <div>
-      <hr>
-      <h2>Cookies</h2>
-      <a href="story.html"><img class="image" src="image/cookies.jpg"></a>
-      <h2>Macroons</h2>
-      <a href="story.html"><img class="image" src="image/macroons.jpg"></a>
-      <h2>Cakes</h2>
-      <a href="story.html"><img class="image" src="image/cake.jpg"></a>
-      </div>
+      <section>
+        <hr>
+        <h2>Cookies</h2>
+        <article class="story-overview">
+          <div class="flex-items" >
+            <a href="story.html"><img class="image" src="image/cookies.jpg"></a>
+          </div>
+          <div class="flex-items">  
+            <p> A cookie is a baked or cooked food that is typically small, flat and sweet. It usually contains flour, sugar and some type of oil or fat. It may include other ingredients such as raisins, oats, chocolate chips, nuts, etc. </p>
+          </div>
+        </article>
+        <h2>Macroons</h2>
+        <article class="story-overview">
+          <div class="flex-items">
+            <a href="story.html"><img class="image" src="image/macroons.jpg"></a>
+          </div>
+          <div class="flex-items">  
+            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita nam mollitia odit tempore animi perspiciatis saepe dolorem fugiat. Similique eveniet necessitatibus temporibus asperiores sint aliquid illo? Debitis, dicta laborum? Numquam. </p>
+          </div>
+        </article>
+        <h2>Cakes</h2>
+        <article class="story-overview">
+         <div class="flex-items">
+           <a href="story.html"><img class="image" src="image/cake.jpg"></a>
+         </div>
+         <div class="flex-items">  
+           <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita nam mollitia odit tempore animi perspiciatis saepe dolorem fugiat. Similique eveniet necessitatibus temporibus asperiores sint aliquid illo? Debitis, dicta laborum? Numquam. </p>
+         </div>
+        </article>
+      </section>
     </main>
     <footer>
       <hr>
